[package]
name = "embedded-pid"
version = "4.1.0"
edition = "2018"
authors = [
    "Skyler Bowden <skybowd15@gmail.com>",
    "Ken Elkabany <ken@elkabany.com>",
    "Owez Griffiths <root@ogriffiths.com>",
]
license = "MIT OR Apache-2.0"
description = "A PID controller for no-std & embedded environments"
repository = "https://github.com/SkyBowd15/embedded-pid"
keywords = ["pid", "embedded", "no-std"]
categories = ["no-std", "embedded", "algorithms"]
readme = "README.md"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[badges]
travis-ci = { repository = "SkyBowd15/embedded-pid" }
